<resources>
    <string name="app_name">LazyEcon</string>
    <string name="lazy_econ">Lazy Econ</string>
    <string name="macro">Macro</string>
    <string name="micro">Micro</string>
    <string name="Supply_and_demand">Supply And Demand</string>
    <string name="Equilibrium">Equilibrium</string>
    <string name="CostandRevenue">Cost And Revenue Analysis</string>
    <string name="Graph">Graph</string>
    <string name="submit">Submit</string>
    <string name="Elasticity">Elasticity</string>
    <string name="Type">Type</string>
    <string name="ChangeQ">%Δ Quantity</string>
    <string name="ChangeP">%Δ Price</string>
    <string name="Submit">Submit</string>
    <string name="Result">Result</string>
    <string name="Elasticitydemandstatement">Elasticity of Demand = </string>
    <string name="Intercept">Intercept</string>
    <string name="plusorminus">+ / -</string>
    <string name="slope">Slope</string>
    <string name="gdp">GDP</string>
    <string name="inflation_and_interest_rate">Inflation and Interest Rate</string>
    <string name="mps_mpc_and_tax_multiplier">MPS/MPC and Tax Multiplier</string>
    <string name="unemployment">Unemployment</string>
    <string name="calculate_gdp">Calculate GDP</string>
    <string name="GDP_approach">What approach will you use \n to calculate the GDP?</string>
    <string name="plus">+</string>
    <string name="shiftval">Shift Value</string>
    <string name="inflation_approach_text">Enter the current and past CPI to find the Inflation Rate.</string>
    <string-array name="micro_tab1_spinner_array">
        <item>Demand</item>
        <item>Supply</item>
        <item>Cross </item>
        <item>Income</item>
    </string-array>
    <string-array name="macro_tab1_spinner_array">
        <item>Expenditure</item>
        <item>Income</item>
    </string-array>
    <string-array name="Graphstuff">
        <item>Graph Content</item>
        <item>Demand or Supply</item>
        <item>Demand and Supply</item>
        <item>Demand or Supply (Shift it)</item>
        <item>Demand and Supply(Shift both)</item>
    </string-array>
</resources>
