<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Micro_Tab1">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="303dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="490dp"
        android:background="@android:color/transparent"
        android:text="@string/Elasticity"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="115dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="261dp"
        android:layout_marginRight="261dp"
        android:layout_marginBottom="439dp"
        android:text="@string/Type"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:layout_marginStart="143dp"
        android:inputType="numberDecimal"
        android:layout_marginLeft="143dp"
        android:hint="@string/ChangeQ" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignRight="@id/textView6"
        android:layout_alignBottom="@+id/spinner1"
        android:layout_marginEnd="-14dp"
        android:layout_marginRight="-14dp"
        android:layout_marginBottom="-2dp"
        android:inputType="numberDecimal"
        android:hint="@string/ChangeP"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-242dp"
        android:layout_marginLeft="-242dp"
        android:layout_marginTop="137dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/tvanswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="137dp"
        android:text="@string/Result"
        android:textSize="30sp" />
</RelativeLayout>
