<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9999ff"
    tools:context=".MicroActivity">

    <Button
        android:id="@+id/micro_tab1_button"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_above="@+id/micro_tab2_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="-149dp"
        android:background="#66ccff"
        android:onClick="micro_goToTab1"

        android:text="@string/Supply_and_demand" />

    <Button
        android:id="@+id/micro_tab2_button"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="149dp"
        android:background="#ff9999
"
        android:onClick="micro_goToTab2"
        android:text="@string/Equilibrium" />

    <Button
        android:id="@+id/micro_tab3_button"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="143dp"
        android:background="#66ccff"
        android:onClick="micro_goToTab3"
        android:text="@string/CostandRevenue" />

    <Button
        android:id="@+id/micro_tab4_button"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:background="#ff9999 "
        android:onClick="micro_goToTab4"
        android:text="@string/Graph" />

</RelativeLayout>