<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Micro_Tab4">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="370dp"
        android:layout_height="374dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="0dp"
        android:background="#9999ff"
        android:text="@string/Type"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/interceptfordemandorsupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Intercept"
        android:inputType="numberDecimal"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <EditText
        android:id="@+id/plusorminus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/plusorminus"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/interceptfordemandorsupply"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <EditText
        android:id="@+id/slope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/slope"
        android:inputType="numberDecimal"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/plusorminus"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="86dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Submit"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner2"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>