<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".macro_tab1">

    <TextView
        android:id="@+id/GDP_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="44dp"
        android:text="@string/calculate_gdp"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/GDP_approach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="210dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="124dp"
        android:text="@string/GDP_approach" />

    <Spinner
        android:id="@+id/macro_tab1_spinner"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_alignTop="@+id/GDP_approach"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-210dp"
        android:layout_toStartOf="@+id/GDP_approach"
        android:text="@string/Type"
        android:layout_marginRight="-210dp"
        android:layout_toLeftOf="@+id/GDP_approach" />
    <EditText
        android:id="@+id/macro_tab1_GDP_editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="188dp"
        android:hint="Consumption"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp" />
    <EditText
        android:id="@+id/macro_tab1_GDP_editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/macro_tab1_GDP_editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="0dp"
        android:hint="Investments"
        android:inputType="numberDecimal"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/macro_tab1_GDP_editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/macro_tab1_GDP_editText1"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/GDP_description"
        android:hint="Government"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        android:layout_marginLeft="-40dp"
        android:layout_toRightOf="@+id/GDP_description" />

    <EditText
        android:id="@+id/macro_tab1_GDP_editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/macro_tab1_GDP_editText1"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_toEndOf="@+id/macro_tab1_GDP_editText3"
        android:layout_toRightOf="@+id/macro_tab1_GDP_editText3"
        android:hint="Net Exports"
        android:inputType="numberDecimal"
        android:textSize="12sp" />

    <Button
        android:id="@+id/macro_tab1_submit_button"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/macro_tab1_GDP_editText4"
        android:layout_alignStart="@+id/macro_tab1_GDP_editText4"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        android:layout_alignLeft="@+id/macro_tab1_GDP_editText4" />

    <TextView
        android:id="@+id/macro_tab1_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/macro_tab1_GDP_editText1"
        android:layout_alignStart="@+id/GDP_description"
        android:layout_marginTop="101dp"
        android:layout_alignLeft="@+id/GDP_description" />

</RelativeLayout>